Project

General

Profile

Actions

Bug #57107

closed

trash purge schedule subcommands aren't working on el9

Added by Ilya Dryomov almost 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
pacific,quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The order in which objects with static storage duration in different TUs are initialized is undefined. If the compiler chooses to initialize Shell::Action objects in action/Trash.cc before Shell::Action objects in action/TrashPurgeSchedule.cc, all "rbd trash purge schedule ..." commands get shadowed by "rbd trash purge" command:

$ rbd trash purge schedule list
rbd: too many arguments

The confusing error arises because "rbd trash purge" takes a single positional argument. "schedule" gets interpreted as <pool-spec> and "list" generates an error.

Help is busted the same way:

$ rbd help trash purge schedule list
usage: rbd trash purge [--pool <pool>] [--namespace <namespace>] 
                       [--no-progress] [--expired-before <expired-before>] 
                       [--threshold <threshold>] 
                       <pool-spec> 

Remove all expired images from trash.

Positional arguments
  <pool-spec>           pool specification
                        (example: <pool-name>[/<namespace>]

Optional arguments
  -p [ --pool ] arg     pool name
  --namespace arg       namespace name
  --no-progress         disable progress output
  --expired-before date purges images that expired before the given date
  --threshold arg       purges images until the current pool data usage is
                        reduced to X%, value range: 0.0-1.0

Related issues 2 (0 open2 closed)

Copied to rbd - Backport #57123: pacific: trash purge schedule subcommands aren't working on el9ResolvedIlya DryomovActions
Copied to rbd - Backport #57124: quincy: trash purge schedule subcommands aren't working on el9ResolvedIlya DryomovActions
Actions #1

Updated by Ilya Dryomov almost 2 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 47570
Actions #2

Updated by Ilya Dryomov almost 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #57123: pacific: trash purge schedule subcommands aren't working on el9 added
Actions #4

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #57124: quincy: trash purge schedule subcommands aren't working on el9 added
Actions #5

Updated by Backport Bot almost 2 years ago

  • Tags set to backport_processed
Actions #6

Updated by Backport Bot over 1 year ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF