rbd: find_action() should sort actions first

The order in which objects with static storage duration in
different TUs are initialized is undefined.  If the compiler
chooses to initialize Shell::Action objects in action/Trash.cc
before Shell::Action objects in action/TrashPurgeSchedule.cc,
all "rbd trash purge schedule ..." commands get shadowed by
"rbd trash purge" command:

$ rbd trash purge schedule list
rbd: too many arguments

The confusing error arises because "rbd trash purge" takes a single
positional argument.  "schedule" gets interpreted as <pool-spec> and
"list" generates an error.

Fixes: https://tracker.ceph.com/issues/57107
Signed-off-by: Ilya Dryomov <idryomov@gmail.com>
(cherry picked from commit e0b428a87a48f2132c825ffde4629709a57b76d6)